Updated project files and bug fixes

--- a/UI/templates/xray_result.html
+++ b/UI/templates/xray_result.html
@@ -124,7 +124,7 @@
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center gap-2" href="{{ url_for('home_html') }}">
         <img src="{{ url_for('static', filename='assets/img1.png') }}" height="50" width="50" class="rounded-circle">
-        <span class="fw-bold">MEDIVISION AI</span>
+        <span class="fw-bold">MEDVISION AI</span>
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
