--- a/UI/templates/about.html
+++ b/UI/templates/about.html
@@ -42,7 +42,7 @@
 
       <a class="navbar-brand d-flex align-items-center gap-2" href="{{ url_for('home_html') }}">
         <img src="{{ url_for('static', filename='assets/img1.png') }}" alt="Logo" height="50" width="50" class="rounded-circle">
-        <span class="fw-bold">MEDIVISION AI</span>
+        <span class="fw-bold">MEDVISION AI</span>
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
